[package]
name = "byteyarn"
version = "0.2.3"
edition = "2021"

authors = ["Miguel Young de la Sota <mcyoung@mit.edu>"]
description = "hyper-compact strings"
homepage = "https://github.com/mcy/byteyarn"
repository = "https://github.com/mcy/byteyarn"
keywords = ["string", "text", "binary"]

license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", optional = true }
