[workspace]
members = [
  "allman",
  "byteyarn",
  "buf-trait",
  "ilex", "ilex/attr",
  "proc2decl",
  "twie",
]
resolver = "2"

[workspace.package]
edition = "2021"

authors = ["Miguel Young de la Sota <mcyoung@mit.edu>"]
homepage = "https://github.com/mcy/strings"
repository = "https://github.com/mcy/strings"
keywords = ["string", "text", "binary"]

license = "Apache-2.0"
