[package]
name = "byteyarn"
version = "0.4.0"
description = "hyper-compact strings"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
buf-trait = { version = "0.4", path = "../buf-trait" }
