[package]
name = "ilex"
version = "0.4.1"
description = "quick and easy lexers for C-like languages"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
byteyarn = { version = "0.4", path = "../byteyarn" }
twie = { version = "0.4", path = "../twie" }

annotate-snippets = "0.10.0"
camino = "1.1.6"
dashmap = "5.5.3"
num-traits = "0.2.17"
similar-asserts = "1.5.0"
rustc_apfloat = "0.2.0"  # By eddyb's recommendation.
unicode-xid = "0.2.4"
