[package]
name = "ilex"
version = "0.6.0"
description = "quick and easy lexers for C-like languages"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
byteyarn = { version = "0.5", path = "../byteyarn" }
twie = { version = "0.5", path = "../twie" }

ilex-attr = { version = "0.5.0", path = "attr" }

annotate-snippets = "0.10.0"
camino = "1.1.6"
num-traits = "0.2.17"
similar-asserts = "1.5.0"
regex-syntax = "0.8.2"
regex-automata = "0.4.3"  # Bless Andrew for his patience.
rustc_apfloat = "0.2.0"  # By eddyb's recommendation.
unicode-xid = "0.2.4"
