[package]
name = "proc2decl"
version = "0.1.0"
description = "Write less frickin' proc macro code"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
nu-glob = "0.101.0"
unicode-xid = "0.2.6"
walkdir = "2.5.0"
