[package]
name = "twie"
version = "0.4.1"
description = "fast and compact prefix tries"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
buf-trait = { version = "0.4", path = "../buf-trait" }
byteyarn = { version = "0.4", path = "../byteyarn" }

boxy = "0.1.0"
